[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuity-orchestrator"
version = "0.1.0"
description = "A policy-first automation system for scheduled continuity operations"
readme = "readme.md"
license = "MIT"
requires-python = ">=3.8"

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
adapters = [
    "httpx>=0.25",
    "resend>=1.0",
]

[project.scripts]
continuity = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
