[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continuity-orchestrator"
version = "0.1.0"
description = "A policy-first automation system for scheduled continuity operations"
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "click>=8.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "jinja2>=3.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
adapters = [
    "httpx>=0.25",
    "resend>=1.0",
]
admin = [
    "flask>=3.0",
    "Pillow>=10.0",
]


[project.scripts]
continuity = "src.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP006/017/035/037/042/045 require Python 3.10+ at runtime (env is 3.8)
# E501 line-length is too noisy for now
ignore = ["UP006", "UP017", "UP035", "UP037", "UP042", "UP045", "E501", "E402", "E741"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
